execute rover for gitlab module

--- a/.github/workflows/ci_gitlab.yml
+++ b/.github/workflows/ci_gitlab.yml
@@ -11,3 +11,17 @@ jobs:
     steps:
       - name: checkout to repo
         uses: actions/checkout@v2
+      - name: run test for gitlab
+        run: |
+          RANDOM=$(cat /dev/urandom | tr -dc "a-z" | fold -w 8 | head -n 1)
+          export environment="ci_${RANDOM}"
+
+          export GITLAB_TOKEN=${{ secrets.GITLAB_TOKEN }}
+
+          export GITLAB_BASE_URL=${{ secrets.GITLAB_BASE_URL }}
+
+          rover -lz /tf/caf/public/landingzones/caf_launchpad -launchpad -var-folder /tf/caf/configuration/${environment}/level0/launchpad -parallelism 30 -level level0 -env ${environment} -a apply
+
+          rover -lz /tf/modules/examples/ -var-folder /tf/modules/examples/devops/providers/gitlab/new_project/  -level level1 -env ${environment} -a apply
+
+          # call rover delete
