login to rover cli

--- a/.github/workflows/ci_gitlab.yml
+++ b/.github/workflows/ci_gitlab.yml
@@ -32,7 +32,11 @@ jobs:
           export GITLAB_BASE_URL=${{ secrets.GITLAB_BASE_URL }}
 
           TENANT_ID=$(echo "${{ secrets.AZURE_CREDENTIALS }}" | jq -r "tenant_id")
+
           SUBSCRIPTION_ID=$(echo "${{ secrets.AZURE_CREDENTIALS }}" | jq -r "subscription_id")
+
+          rover login -t "${TENANT_ID}" -s "${SUBSCRIPTION_ID}"
+
           rover -lz /tf/caf/public/landingzones/caf_launchpad -launchpad -var-folder /tf/caf/configuration/${environment}/level0/launchpad -parallelism 30 -level level0 -env ${environment} -a apply
 
           rover -lz /tf/modules/examples/ -var-folder /tf/modules/examples/devops/providers/gitlab/new_project/  -level level1 -env ${environment} -a apply
