give rover alias to rover.sh in the rover/scripts folder

--- a/.github/workflows/ci_gitlab.yml
+++ b/.github/workflows/ci_gitlab.yml
@@ -41,6 +41,8 @@ jobs:
 
           echo "Subscription Id is '${SUBSCRIPTION_ID}'"
 
+          alias rover="./rover/scripts/rover.sh"
+
           # login rover cli
           rover login -t "${TENANT_ID}" -s "${SUBSCRIPTION_ID}"
 
