--- a/.github/workflows/ci_gitlab.yml
+++ b/.github/workflows/ci_gitlab.yml
@@ -11,6 +11,11 @@ on:
 jobs:
   ci:
     runs-on: [ubuntu-latest]
+
+    container:
+      image: aztfmod/rover:0.13.6-2104.0803
+      options: --user 0
+
     steps:
       - name: checkout to repo
         uses: actions/checkout@v2
