--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,4 +3,9 @@
 
   // Update the 'dockerComposeFile' list if you have more compose files or use different names.
   "dockerComposeFile": "docker-compose.yml",
+
+  // Container user to use in VSCode Online and GitHub Codespaces
+  "containerUser" : "vscode",
+  "remoteUser" : "vscode",
+
 }
