vscode settings defined

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,4 +15,14 @@
   // The optional 'workspaceFolder' property is the path VS Code should open by default when
   // connected. This is typically a volume mount in .devcontainer/docker-compose.yml
   "workspaceFolder": "/tf/caf",
+
+  // Use 'settings' to set *default* container specific settings.json values on container create.
+  // You can edit these settings after create using File > Preferences > Settings > Remote.
+  "settings": {
+      "files.eol": "\n",
+      "terminal.integrated.shell.linux": "/bin/bash",
+      "editor.tabSize": 2,
+      "terminal.integrated.scrollback": 8000,
+  },
+
 }
