--- a/.github/workflows/ci_azure_devops.yml
+++ b/.github/workflows/ci_azure_devops.yml
@@ -2,8 +2,12 @@ name: ci_azure_devops
 
 on:
   pull_request:
+    paths:
+      - .github/workflows/master-200.yaml
+      - 'modules/azure-devops/**'
+      - 'examples/azure-devops/**'
   push:
-    branches: master
+    branches: main
     paths:
     - "examples/azure-devops/**"
     - "modules/azure-devops/**"
