correcting gitlab path and workflow path in pr trigger

--- a/.github/workflows/ci_gitlab.yml
+++ b/.github/workflows/ci_gitlab.yml
@@ -3,9 +3,9 @@ name: ci_gitlab
 on:
   pull_request:
     paths:
-      - .github/workflows/master-200.yaml
-      - 'modules/azure-devops/**'
-      - 'examples/azure-devops/**'
+      - .github/workflows/ci_gitlab.yml
+      - 'modules/gitlab/**'
+      - 'examples/gitlab/**'
   push:
     branches: main
     paths:
