--- a/.github/workflows/ci_azure_devops.yml
+++ b/.github/workflows/ci_azure_devops.yml
@@ -3,7 +3,7 @@ name: ci_azure_devops
 on:
   pull_request:
     paths:
-      - .github/workflows/master-200.yaml
+      - .github/workflows/ci_azure_devops.yml
       - 'modules/azure-devops/**'
       - 'examples/azure-devops/**'
   push:
